--- a/common/.tmux.conf
+++ b/common/.tmux.conf
@@ -23,8 +23,8 @@ set-option -g renumber-windows on
 set-option -g allow-rename off
 
 # remap splits to open pane in cwd
-bind '"' split-window -v -c "#{pane_current_path}"
-bind % split-window -h -c  "#{pane_current_path}"
+bind h split-window -v -c "#{pane_current_path}"
+bind v split-window -h -c  "#{pane_current_path}"
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
