fix tmux vim nav

--- a/common/.tmux.conf
+++ b/common/.tmux.conf
@@ -35,7 +35,8 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 # copy to selection to clipboard: y
 set -g @plugin 'tmux-plugins/tmux-yank'
 
-# move between vim/tmux with: Ctrl+(h|j|k|l) set -g @plugin 'christoomey/vim-tmux-navigator'
+# move between vim/tmux with: Ctrl+(h|j|k|l)
+set -g @plugin 'christoomey/vim-tmux-navigator'
 
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
