--- a/common/.tmux.conf
+++ b/common/.tmux.conf
@@ -26,6 +26,7 @@ set-option -g allow-rename off
 bind h split-window -v -c "#{pane_current_path}"
 bind v split-window -h -c  "#{pane_current_path}"
 
+# cloned manually to ~/.tmux/plugins/tpm/
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
