--- a/common/.config/alacritty/alacritty.toml
+++ b/common/.config/alacritty/alacritty.toml
@@ -40,15 +40,15 @@ foreground = "#fcfcfc"
 size = 10
 
 [font.bold]
-family = "Source Code Pro"
+family = "SauceCodePro Nerd Font Mono"
 style = "Bold"
 
 [font.bold_italic]
-family = "Source Code Pro"
+family = "SauceCodePro Nerd Font Mono"
 style = "Bold Italic"
 
 [font.italic]
-family = "Source Code Pro"
+family = "SauceCodePro Nerd Font Mono"
 style = "Italic"
 
 [font.normal]
