--- a/common/.tmux.conf
+++ b/common/.tmux.conf
@@ -27,6 +27,7 @@ bind h split-window -v -c "#{pane_current_path}"
 bind v split-window -h -c  "#{pane_current_path}"
 
 # cloned manually to ~/.tmux/plugins/tpm/
+# prefix + I: install other plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
