updates for new dock

--- a/arch/.config/i3/config
+++ b/arch/.config/i3/config
@@ -144,15 +144,15 @@ set $ws10 "10"
 # set which monitor each workspace should start on
 # also specifies laptop screen as default if not connected
 set $monlaptop "eDP-1"
-workspace $ws1 output HDMI-1 $monlaptop
-workspace $ws3 output HDMI-1 $monlaptop
-workspace $ws5 output HDMI-1 $monlaptop
-workspace $ws7 output HDMI-1 $monlaptop
-workspace $ws9 output HDMI-1 $monlaptop
-workspace $ws2 output DP-2 $monlaptop
-workspace $ws4 output DP-2 $monlaptop
-workspace $ws6 output DP-2 $monlaptop
-workspace $ws8 output DP-2 $monlaptop
+workspace $ws1 output DP-1-1-6 HDMI-1 $monlaptop
+workspace $ws3 output DP-1-1-6 HDMI-1 $monlaptop
+workspace $ws5 output DP-1-1-6 HDMI-1 $monlaptop
+workspace $ws7 output DP-1-1-6 HDMI-1 $monlaptop
+workspace $ws9 output DP-1-1-6 HDMI-1 $monlaptop
+workspace $ws2 output DP-1-2 DP-2 $monlaptop
+workspace $ws4 output DP-1-2 DP-2 $monlaptop
+workspace $ws6 output DP-1-2 DP-2 $monlaptop
+workspace $ws8 output DP-1-2 DP-2 $monlaptop
 workspace $ws10 output $monlaptop
 
 # switch to workspace
